Change log next version
-----------------------
* Fix #668 @Mock fields are not injected anymore (1.6.5 regression)
* Renamed org.powermock.reflect.internal.WhiteboxImpl.getAllMetodsExcept to org.powermock.reflect.internal.WhiteboxImpl.getAllMethodsExcept (typo)

Change log 1.6.5 (2015-04-30)
-----------------------------
* Add ability to chain returns with doReturn() (thanks to "gauee" for pull request) (issue #599)
* Code quality improvement, @Override annotation should be used on any method overriding (since Java 5) or implementing (since Java 6) another one
* PowerMockRunner now processes JUnit Rules correctly (thanks to Stefan Birkner for pull request) (issue 427)
* Added support for @TestSubject in EasyMock API. This is the equivalent of @InjectMocks in Mockito (big thanks to Arthur Zagretdinov for pull request)
* Added experimental support for mockito 2.x
* Ensuring JVM method size limit is never exceeded. Throw an user frendly exception if method size is exceeded. (thanks to Tomasz Przybyla for pull request) (issue #661)
* Fix #214: Whitebox.invokeConstructor may not work as expected with overloaded constructors
* Fix #352: PowerMockRunner should run tests defined in super class
* Fix #510: Static method mocking with Mockito 1.9.5 and Powermock fails with Java 8 Consumer Interface
* Fix #512: @PrepareForTest on method not working with PowerMockRule
* Fix #652: PowerMock stubbing void method don't work for overloaded methods
* Fix #648: TestNG SkipException doesn't work with PowerMock
* Fix #634/#632: Add workaround as fix  for Mockito 1+. Wait fix from Mockito team for Mockito 2.
* Fix #590: suppress(method) doesn't work on a @Spy/PowerMockito.spy
* Upgraded commons-logging dependency to version 1.2
* Upgraded objenesis dependency to version 2.2
* Upgraded TestNG dependency to version 6.9.10.
* Upgraded xStream dependency to version 1.4.9.
* ASM for PowerMock Javaagent repackaged from new version 5.0.4

Change log 1.6.4 (2015-12-11)