@@ -23,7 +23,11 @@ public class ClassWithInternalState {
 
     private static int staticState = 5;
 
-    private static final int staticFinalState = 15;
+    private static final int staticFinalIntState = 15;
+
+    private static final Integer staticFinalIntegerState = 15;
+
+    private static final String staticFinalStringState = "Some String";
 
     private int internalState = 0;
 
@@ -59,8 +63,8 @@ public class ClassWithInternalState {
         return staticState;
     }
 
-    public static int getStaticFinalState() {
-        return staticFinalState;
+    public static Integer getStaticFinalIntegerState() {
+        return staticFinalIntegerState;
     }
 
     public ClassWithPrivateMethods getClassWithPrivateMethods() {
